--- a/hello.html
+++ b/hello.html
@@ -17,8 +17,16 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<!-- description -->
 		<div>
+			<h1>Ma description</h1>
 			<p>Une description</p>
+		</div>
+		
+		<!-- recompense -->
+		<div>
+			<h1>Mes récompences</h1>
+			<p>En construction</p>
 		</div>
 		
 	
